# Fractals-CUDA

./: CMakeLists.txt  CPU_mandelbrot.cpp  README.md  main.cpp  mandelbrot.cu  mandelbrot.cuh
src/: draw_mandelbrot.cpp  draw_mandelbrot.cu  draw_mandelbrot.cuh  draw_mandelbrot.hpp  main.cpp  mandelbrot.cu  mandelbrot.cuh
